Overflow issues update. Full sotry update (CSS).

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,12 @@ html, body {
   height: 100%;
 }
 
+@media (min-width: 768px) and (max-width: 1080px) {
+  main {
+    overflow-x: hidden;
+  }
+}
+
 ::-moz-selection {
   background: #F9E2E2;
 }
