--- a/resources/css/base/_general.scss
+++ b/resources/css/base/_general.scss
@@ -2,6 +2,12 @@ html, body {
 	height: 100%;
 }
 
+main {
+	@include tablet {
+		overflow-x: hidden;
+	}
+}
+
 ::selection {
 	background: $primary-color-light;
 }
